The changes that were made, or not

--- a/src/pmp/Makefile
+++ b/src/pmp/Makefile
@@ -15,10 +15,20 @@ LDFLAGS =
 LIBS = -lpspctrl -lpsppower -lpspaudiocodec -lpspmpeg -lpspgu
 
 PSPSDK=$(shell psp-config --pspsdk-path)
-PSPDIR=$(shell psp-config --psp-prefix)
 include $(PSPSDK)/lib/build.mak
 
-install: $(TARGET_LIB)
-	@$(CP) -v libpmp.a $(PSPDIR)/lib
-	@$(CP) -v pmp.h $(PSPDIR)/include
-	@echo Done.
+all: libpmp
+
+libpmp:
+	rm -f *.o libpmp.a
+	make TARGET_LIB=libpmp.a OBJS=$(OBJS) libpmp.a
+	psp-ar cru libpmp.a $(OBJS)
+	psp-ranlib libpmp.a
+
+install:
+	@cp -v libpmp.a `psp-config --psp-prefix`/lib
+	@cp -v pmp.h `psp-config --psp-prefix`/include
+	@echo "Done."
+
+clean:
+	rm -f *.o *.a
