--- a/src/tests/font/Makefile
+++ b/src/tests/font/Makefile
@@ -4,7 +4,7 @@ OBJS = fonttest.o ../../streams/streams.o ../../triVAlloc.o ../../triMemory.o ..
 PSPBIN = $(shell psp-config --psp-prefix)
 
 INCDIR = 
-CFLAGS = -O0 -G0 -Wall -g -DDEBUG -D_DEBUG -D_DEBUG_LOG -D_DEBUG_MEMORY -DTRI_SUPPORT_FT $(shell $(PSPBIN)/bin/freetype-config --cflags)
+CFLAGS = -O0 -G0 -Wall -g -DDEBUG -D_DEBUG -D_DEBUG_LOG -D_DEBUG_MEMORY -D__PSP__ -DTRI_SUPPORT_FT $(shell $(PSPBIN)/bin/freetype-config --cflags)
 CXXFLAGS = $(CFLAGS) -fno-exceptions -fno-rtti
 ASFLAGS = $(CFLAGS)
 
@@ -13,10 +13,6 @@ LIBS = -lpspgum -lpspgu -lpsprtc -lfreetype -lm -lz $(shell $(PSPBIN)/bin/freety
 BUILD_PRX = 1
 
 EXTRA_TARGETS = EBOOT.PBP
-
-all: clean
-
-quick:
 
 PSPSDK=$(shell psp-config --pspsdk-path)
 include $(PSPSDK)/lib/build.mak
