--- a/src/tests/particle/Makefile
+++ b/src/tests/particle/Makefile
@@ -1,10 +1,10 @@
 TARGET = particletest
 OBJS = particletest.o ../../streams/streams.o ../../triParticle.o ../../triTexman.o ../../triCamera.o ../../triVAlloc.o \
        ../../triMemory.o ../../triRefcount.o ../../triImage.o ../../rle.o ../../triGraphics.o ../../tri3d.o \
-       ../../triLog.o ../../triInput.o ../../triVMath_vfpu.o ../../triTimer.o ../../triFont.o
+       ../../triLog.o ../../triInput.o ../../triVMath_vfpu.o ../../triTimer.o
 
 INCDIR = 
-CFLAGS = -O3 -G0 -Wall -g -DDEBUG -D_DEBUG -D_DEBUG_LOG -D_DEBUG_MEMORY
+CFLAGS = -O3 -G0 -Wall -g -DDEBUG -D_DEBUG -D_DEBUG_LOG -D_DEBUG_MEMORY -D__PSP__
 CXXFLAGS = $(CFLAGS) -fno-exceptions -fno-rtti
 ASFLAGS = $(CFLAGS)
 
@@ -13,8 +13,6 @@ LIBS = -lpspgum -lpspgu -lpsprtc -lm -lz
 BUILD_PRX = 1
 
 EXTRA_TARGETS = EBOOT.PBP
-
-all: clean
 
 PSPSDK=$(shell psp-config --pspsdk-path)
 include $(PSPSDK)/lib/build.mak
