The changes that were made, or not

--- a/src/tests/graphics/Makefile
+++ b/src/tests/graphics/Makefile
@@ -1,10 +1,10 @@
 TARGET = gfxtest
-OBJS = gfxtest.o ../../streams/streams.o ../../triFont.o ../../triVAlloc.o ../../triMemory.o ../../triRefcount.o ../../triImage.o ../../rle.o ../../triGraphics.o ../../triLog.o ../../triInput.o
+OBJS = gfxtest.o ../../streams/streams.o ../../triFont.o ../../triVAlloc.o ../../triMemory.o ../../triRefcount.o ../../triImage.o ../../rle.o ../../triGraphics.o ../../triLog.o
 
 BUILD_PRX = 1
 
 INCDIR = 
-CFLAGS = -O2 -G0 -Wall -g -D_DEBUG -D_DEBUG_LOG -D_DEBUG_MEMORY -DTRI_DDLIST -DTRI_SUPPORT_PNG
+CFLAGS = -O2 -G0 -Wall -g -DDEBUG -D_DEBUG -D_DEBUG_LOG -D_DEBUG_MEMORY -D__PSP__ -DTRI_SUPPORT_PNG
 CXXFLAGS = $(CFLAGS) -fno-exceptions -fno-rtti
 ASFLAGS = $(CFLAGS)
 
@@ -13,8 +13,6 @@ LIBS = -lpspgum -lpspgu -lpsprtc -lpng -lm -lz
 BUILD_PRX = 1
 
 EXTRA_TARGETS = EBOOT.PBP
-
-all: clean
 
 PSPSDK=$(shell psp-config --pspsdk-path)
 include $(PSPSDK)/lib/build.mak
